<resources>
    <string name="app_name">CalorieManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">主页</string>
    <string name="discover">发现</string>
    <string name="statistic">统计</string>
    <string name="login">登录</string>
    <string name="system">Account</string>
    <string name="swipe">SwipeBack</string>
    <string name="takepicture">TakePic</string>
    <string name="foodrec">食物识别</string>
    <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
    <string name="recommend">运动推荐</string>
    <string name="hot">美食速递</string>
    <string name="favorite">发现周边</string>
    <string name="set">设置</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="camera">FoodCamera</string>
    <string name="sure">确定</string>
    <string name="reading_title">今日热读</string>
    <string name="Calorie_token">"7601dc4ce3192d433ba40e7492069677"</string>
    <string-array name="large_text">
        <item>
        "虽说一年四季皆有蟹吃，但是在秋天，才是吃蟹的最好季节。有说“秋风起，蟹脚痒；菊花开，闻蟹来”，每年9~10月正是螃蟹黄多油满之时，所以有食家言“秋天以吃螃蟹为最隆重之事”。\n\n"
        "据说，蟹，自古就有“四味”之说。“大腿肉”，肉质丝短纤细，味同干贝；\n\n"
        "“小腿肉”，丝长细嫩，美如银鱼；“蟹身肉”，洁白晶莹，胜似白鱼；“蟹黄”，含有大量人体必需的蛋白质、脂肪、磷脂、维生素等营养素，营养丰富。"
        "正是如此，厨师们也是费尽苦心，搞了许多有关“蟹”美食创意，如生蒸大闸蟹、香辣蟹、姜葱蟹、椒盐蟹等。当然了，在美食之乡的顺德，你随时随处都可以品尝到“秋蟹”的各种滋味。\n\n"
        "说秋天是吃蟹的季节，这是因为季节与蟹的生长质量有很大的关系，秋季是螃蟹生长最好的时期，它们的肉厚肥嫩，且味美色香，为一年当中最鲜美。什么膏蟹、肉蟹、大闸蟹等，都在秋天长得最好。\n"
        </item>
        <item>
            "在饭桌上品尝美味的三文鱼时，我们中也许很少有人知道它们令人感动的生命故事。\n\n"
            "三文鱼的一生令人惊叹！尤其令人感动的是它们生命的最后一刻。\n\n"
            "从还是鱼卵的时候开始，它们的生命就经受了考验。每一条雌鱼能够产下大约4000个鱼卵，并想方设法将其藏在卵石下，但大量的鱼卵还是被其他鱼类和鸟类当作美味吃掉了——幸存下来的鱼卵躲在石头下面熬过冬天，慢慢发育成幼鱼。春天来临时，幼鱼便顺流而下，进入淡水湖，在湖中度过大约一年的时光，然后再顺流而下进入大海。在湖中的时候，尽管东躲西藏，大多数幼鱼依然逃不过被捕食的命运，每四条进入湖中的鱼就有三条被吃掉，只有一条能够进入大海。危险并没有停止，进入广袤的大海，意味着进入了一个更加危险的区域。在无边无际的北太平洋中，它们一边努力地长大，一边面对鲸鱼、海豹和其他鱼类的进攻，同时还有大量更具危险性的捕鱼船在威胁它们的生命。整整四年，经历无数艰险，它们才能长成重量在三公斤左右的成熟三文鱼。\n\n"
            "成熟之后，一种内在的使命感召唤它们开始回家的旅程。10月初，所有成熟的三文鱼在佛雷瑟河口集结，浩浩荡荡地游向它们的出生地，这才是它们生命最辉煌最悲壮时刻的开始。从进入河口开始，它们就不再吃任何东西，全力赶路，在逆流而上的路途中消耗掉自身几乎所有的能量和体力。为了闯过一个个急流和险滩，它们要一次又一次地从水面上跃起。有些鱼跃到了岸上，变成了其他动物的美味；有些鱼在快要到达目的地的时候力竭而亡，和它们一起死去的还有肚子里的几千个鱼卵。在一路奋力而上的过程中，由于能量的大量消耗，鱼身变得浑身通红，鱼头变成了墨绿色。在最初那条雌鱼产下的每四千个鱼卵中，只有两个能够成活长大并最终回到产卵地。到达产卵地后，它们顾不上片刻休息，开始成双成对地挖坑产卵受精。为了得到更好更安全的产卵地，鱼与鱼之间进行着激烈的争夺。与此同时，白天有大量鹰隼俯冲而下抓捕三文鱼，晚上则有大量的熊和郊狼来参与捕食。产卵受精完毕之后，三文鱼精疲力竭双双死去，河水中到处漂浮着死去的三文鱼。它们在生命最后的挣扎中完成了自己的使命，把新一轮生命让给后代，结束了只为繁殖下一代而进行的死亡之旅。冬天来临，白雪覆盖大地，整个世界一片静谧。在寂静的河水下面，新的生命开始成长。\n\n"
            "三文鱼的一生，充满了危险和悲壮，它们克服种种困难，躲避无数危险，在生命的最后时刻，搏击逆流，洄游产卵，为自己的生命画上句号。这样做也许只是遗传和基因使然，并不是一种自觉的精神意识。但在我们人类看来，这一现象依然令人感动，让我们思索和振奋。三文鱼的一生贯穿着明晰的生命主线：成长，不顾各种艰难险阻地成长；体验，不管大海多么不可预测，也要去体验从平静湖水游向大海的过程；使命，不管遭遇多少险阻都要完成一生的使命，返回出生地去繁衍后代，就算以生命为代价也在所不惜。三文鱼的一生因这条生命的主线而变得慷慨悲壮，震撼人心。\n\n"
            "人类生命的进程中，也应该有非常明晰的生命主线。我们应该努力成长，不惜一切代价使生命变得成熟。为了成熟我们应该去体验，体验自然、人文、社会和历史，由此使我们的生命臻于完美。我们更需要使命感，因为人活着不仅仅是为了活着，生命的背后有使命存在。这些使命也许各不相同，但从终极意义上来说应该是一致的，就是努力让我们和我们的后代在更加和谐自然的世界中幸福地生活。\n\n"
            "在现实生活中，有太多的人忘记了自己需要成长，变得懒惰、无聊和平庸；有太多的人忘记了应该去体验，变得胆怯、狭隘和固执；有太多的人忘记了自己承担的使命，变得苍白、迷茫和失落。\n\n"
            "在三文鱼洄游的季节，来到河边的人成千上万。在观看三文鱼生死搏击的同时，我们是否能从它们身上得到一点点感悟，并且重新开始思考自己的生命历程呢？\n"
        </item>
        <item>"材料:（34CM×24CM盆份量）\n
            蛋4个(大)  \n
            细砂糖40克  \n
            盐1/4茶匙\n
            低粉80克  \n
            玉米粉(CornStarch)10克  \n
            抹搽粉10-15克   \n
            色拉油50克   \n
            橘子汁50克   \n
            香草精(VanillaEssence)1/4茶匙 \n
            泡打粉1/2茶匙 \n
            细砂糖60克   \n
            塔塔粉少许  \n
            蜜红豆(RedBean)适量  \n\n

            发泡奶油材料: \n
            无盐奶油(UnsaltedButter)225克   \n
            糖粉90克   \n
            蓝姆酒(RUM)10克   \n \n

            准备: \n
            长方型烤盘一个铺上烤盘纸在均匀洒上蜜红豆备用. \n \n

            制作 \n
            1.把蛋黄、糖、盐搅拌到呈乳白色+色拉油、橘子汁、香草精拌匀。 \n
            2.低粉、玉米粉、抹搽粉，泡打混合筛入(1)内搅拌均匀成为面糊备用。 \n
            3.蛋白打至起粗泡，再把事先混合好的糖和塔塔粉分2次加入，搅打至8分发(湿性发泡)。 \n
            4.取1/3蛋白加入蛋黄糊中稍微拌合，再倒入蛋白糊中轻轻拌匀即可。 \n
            5.拌好的面糊倒入烤盘内表面用刮板抹平，轻敲烤盘一下即送进烤箱以180℃/160℃烤约15-20分钟，蛋糕烤好出炉后再轻敲一下，待稍凉，抹上发泡奶油卷成圆筒状，入冰箱冷藏20分钟定型，即可切片食用。 \n
            6.发泡奶油制作：奶油+糖粉打至呈乳白色+蓝姆酒再继续打到膨松状即完成。 \n"</item>
        <item>很多人都认为跑步可以强身健体、减肥、改善身形，最多再加上一个泡妞。但如果仅此而已，那只能说你对于跑步还是一知半解。一群来自国外的科学家，用几年甚至是十几年的研究结果告诉你，跑步的好处远不止停留在你的眼睛所能看到的，它对于很多疾病的治疗能力甚至超过药物。只要你愿意迈开双脚，你身上那些无形的改变就是跑步最大的魔力。\n\n
            瑞典哥德堡大学的研究人员发现偏头痛最大的克星就是跑步，因为跑步可以有效地调节神经系统。如果一个偏头痛患者每周进行三次长达40分钟的运动，特别是跑步，那么三个月之后他的症状就会明显减轻。美国的神经内科学家也在行医的过程中发现了这一点，在他的记录中有16个连药物也治不好的偏头痛患者通过六个月到两年的慢跑锻炼最终战胜了偏头痛，他们不仅症状得到了缓解，还能摆脱药罐子的束缚。\n\n
            耳朵和双腿，这两样器官看上去风马牛不相及，不过其中却暗藏着玄机。美国贝拉明大学的学者发现经常跑步的人比平时不锻炼的平均听力要好上六个百分点。原因是每当你迈开双腿跑步时，体内的血液循环系统可以得到改善，特别是耳朵的血液循环，让耳朵能够更好地吸收养分，从而保护听力。\n\n
            虽然癌症目前为止还是一个无法攻克的医学难题，但多项研究已经证明跑步就是防癌中相当有效的一种。芬兰学者对2560名中年男性进行了长达17年的跟踪研究，发现勤于运动的人们患上胃肠道以及肺部的癌症的概率要小得多。专家称慢跑时人体吸入了比平常多几倍甚至是几十倍的氧气，使得全身的脏器官都能更好地运作。如果长期缺乏锻炼的话，在缺氧状态下的癌细胞科比平常活跃得多。此外，由于跑步还能帮助女性规避了因多余的脂肪所造成的乳腺癌、子宫内膜癌的风险。美国癌症协会亚特兰大分会科学家完成的研究显示，与每周步行三个小时以下的女性测试者相比，每周步行七小时以上的女性测试者乳腺癌确诊率低14%。\n\n
            如果你以为跑步只是一项体力活，那你就大错特错了：跑步其实也是一项“脑力活”。来自英国剑桥大学的一份科学研究报告向人们揭示了跑步和智力之间的关系。根据研究的结果，一周抽出几天时间来慢跑，能刺激大脑、提高自身的思维能力。数以万计的人都在跑步几天之后在大脑记忆关联区域出现了新的脑细胞，这无疑增强了跑者的记忆能力，让他们学的更快也更有效率。难怪许多科学家与各领域大咖们都是跑步爱好者。\n
        </item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="image_transition">image_transition</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="send">Send</string>
    <string name="sign_in_success">Sign in successful, NavigationView\'s name has changed</string>
    <string name="can_swipe">can be swipe-back</string>
    <string name="upper_process">Passed to the upper processing!</string>
    <string name="anim_v">Set animation: Vertical</string>
    <string name="anim_h">Set animation: Horizontal</string>
    <string name="anim_none">Set animation: None</string>
    <string name="anim">anim</string>
    <string name="account">用户名</string>
    <string name="modify_title">Modify the title successfully</string>
    <string name="modify_success">Modify successfully!</string>
    <string name="error_username">This username is invalid</string>
    <string name="error_pwd">This password is invalid</string>
    <string name="tip_single_multi">Single Activity + Multi-Fragments:</string>
    <string name="btn_basic">Demo1: Similar to GooglePlay</string>
    <string name="btn_normal">Demo2: Similar to Instagram</string>
    <string name="btn_complicated">Demo3: Complicated nested</string>
    <string name="start_cycler">Start CyclerFragment</string>
    <string name="start_with_pop">Start CyclerFragment, and finish self</string>
    <string name="modify">Modify Title</string>
    <string name="settings">Settings</string>
    <string name="action_anim_v">Set animation:Vertical(Default)</string>
    <string name="swipe_back">Swipe back</string>
    <string name="time">2 days ago</string>
    <string name="msg">Msg</string>
    <string name="all">All</string>
    <string name="start_result_test">StartForResult Sample</string>
    <string name="more">more</string>
    <string name="me">Me</string>
    <string name="hot_news">精选好文</string>
    <string name="new_tip_start_dont_hide">Customize the animation between the Fragments, and do not hide self</string>
    <string name="new_tip_start">Customize the animation between the Fragments</string>
    <string-array name="array_title">
        <item>秋天--吃螃蟹的最好季节</item>
        <item>三文鱼的生命旅程</item>
        <item>抹茶与红豆</item>
        <item>跑步的好处</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="array_content">
        <item>据说，蟹，自古就有“四味”之说。“大腿肉”，肉质丝短纤细，味同干贝；“小腿肉”，丝长细嫩，美如银鱼；“蟹身肉”，洁白晶莹，胜似白鱼；“蟹黄”，含有大量人体必需的蛋白质、脂肪、磷脂、维生素等营养素，营养丰富。</item>
        <item>在饭桌上品尝美味的三文鱼时，我们中也许很少有人知道它们令人感动的生命故事。三文鱼的一生令人惊叹！尤其令人感动的是它们生命的最后一刻。</item>
        <item>抹茶与红豆，天生的一对，清香的抹茶配上甜蜜浓郁的红豆，碧绿与深红带来了不可替代的美味，就像相融相嵌的爱恋，绝对给人味觉上难以抵挡的诱惑。</item>
        <item>一群来自国外的科学家，用几年甚至是十几年的研究结果告诉你，跑步的好处远不止停留在你的眼睛所能看到的，它对于很多疾病的治疗能力甚至超过药物。只要你愿意迈开双脚，你身上那些无形的改变就是跑步最大的魔力。</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="sports_rank_title">
        <item>滑滑的滑雪</item>
        <item>菜鸡的篮球</item>
        <item>懒人运动-麻将</item>
        <item>安然无恙的跳水</item>
        <item>作死不死之跳伞</item>
        <item>小球转动大球</item>
        <item>我是阿甘</item>
        <item>程序员体操</item>
        <item>文明观球</item>
        <item>解密香港记者跑步</item>
        <item>天降正义之铅球</item>
        <item>愤怒的程序员</item>
        <item>我书读的多不会骗人的</item>
    </string-array>
</resources>